--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_CONNECTION = mongodb+srv://aliciachao:myMongoAtlas@cluster0-6ymrh.mongodb.net/Cluster0?retryWrites=true&w=majority
+DB_CONNECTION = mongodb+srv://aliciachao:myMongoAtlas@cluster0-6ymrh.mongodb.net/<dbname>?retryWrites=true&w=majority
 
 
 MONGO_ATLAS_PW = myMongoAtlas
